--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:theme="@style/Theme.PersonManager"
         tools:targetApi="31">
         <activity
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
